<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:gravity="center_vertical"
	tools:context=".PathMeasureDemoActivity">

	<Button
		android:id="@+id/path_tracing"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/path_tracing"/>

	<Button
		android:id="@+id/path_paint"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/path_paint"/>

	<Button
		android:id="@+id/path_pos_tan"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/path_pos_tan"/>

</LinearLayout>